<?xml version="1.0"?>
<package format="2">
  <name>my_nav</name>
  <version>0.0.0</version>
  <description>The my_nav package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="leechanwoo25@gmail.com">Chanwoo Lee</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend> rospy </build_depend>
  <exec_depend> rospy </exec_depend>
  <!--  -->
  <build_depend> roscpp </build_depend>
  <exec_depend> roscpp </exec_depend>
  <!--  -->
  <build_depend> std_msgs </build_depend>
  <exec_depend> std_msgs </exec_depend>
  <!--  -->
  <build_depend> geometry_msgs </build_depend>
  <!--  -->
  <build_depend> roslib </build_depend>
  <exec_depend> roslib </exec_depend>
  <!--  -->
  <build_depend> nav_msgs </build_depend>
  <exec_depend> nav_msgs </exec_depend>
  <!--  -->
  <build_depend> tf </build_depend>
  <exec_depend> tf </exec_depend>
  <!--  -->
  <build_depend>actionlib</build_depend>
  <exec_depend>actionlib</exec_depend>
  <!--  -->
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <!--  -->
  <build_depend>dbot_msgs</build_depend>
  <exec_depend>dbot_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
